--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> </title>
-        <link href="Estilo_practica01.css" rel="stylesheet" type="text/css">
+        <title> Práctica 3 de mayo</title>
+        <link href="diseño.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-        
+        <h1> Primer titular - curso <em> Aplicaciones Web </em></h1>
+        <p> Saludos <strong> estudiantes </strong> del tercero G </p>
+        <p> <a href="Practica_060522_2.html"</p>
     </body>
-    <script src=".js"></script>
+    <script src="Codigo_practica01.js"></script>
 </html>
