--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
         <p> Saludos <strong> estudiantes </strong> del tercero G </p>
         <p> <a href="Practica_060522_2.html"</p>
     </body>
-    <script src="javascript12.js"></script>
+    <script src="javascript12NNNNDDDD.js"></script>
 </html>
